feat: Prepare project for initial deployment
